[TH2-2339] Add IN negative test for metadata filter